git ignore updated for reports, added tex file, made a new class named BoardNode

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ local.properties
 # PDT-specific
 .buildpath
 
+
+report/*.aux
+report/*.bbl
+report/*.bcf
+report/*.blg
+report/*.log
+report/*.out
+report/*.pdf
+report/*.xml
+report/*.gz
+report/*.toc
